tests/baselines/reference/extendsClauseAlreadySeen.errors.txt
tests/cases/compiler/extendsClauseAlreadySeen.ts(4,19): error TS1005: '{' expected.
tests/cases/compiler/extendsClauseAlreadySeen.ts(4,29): error TS1005: ';' expected.
tests/cases/compiler/extendsClauseAlreadySeen.ts(5,11): error TS1005: ';' expected.
tests/cases/compiler/extendsClauseAlreadySeen.ts(5,5): error TS2304: Cannot find name 'baz'.


==== tests/cases/compiler/extendsClauseAlreadySeen.ts (4 errors) ====
    class C {
    
    }
    class D extends C extends C {
                      ~~~~~~~
!!! error TS1005: '{' expected.
                                ~
!!! error TS1005: ';' expected.
        baz() { }
              ~
!!! error TS1005: ';' expected.
        ~~~
!!! error TS2304: Cannot find name 'baz'.
    }